# printVersionCmake

./: CMakeLists.txt  README.md
cmake/: git_version.cmake
src/: main.cpp
